Add support for a lib/endorsed to scripts